.k8s/db-mongodb.yml
# This file holds the K8s objects for the MongoDB instance
---
# Headless Service
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  labels:
    role: mongodb

spec:
  type: ClusterIP
  clusterIP: None
  selector:
    role: mongodb
  
  ports:
    - port: 27017
      targetPort: 27017

---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-set
  labels:
    role: mongodb

spec:
  serviceName: "mongodb-service"
  replicas: 1
  selector:
    matchLabels:
      role: mongodb

  # Pod Template
  template:
    metadata:
      labels:
        role: mongodb

    spec:
      containers:
        - name: mongodb-db
          image: mongo:8.2
          volumeMounts:
            - name: mongodb-data
              mountPath: /data/db
            - name: mongodb-init
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: mongodb-init
          configMap:
            name: mongodb-init-configmap
  
  # Volume Claim Templates
  volumeClaimTemplates:
    - metadata:
        name: mongodb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "ebs-storageclass"
        resources:
          requests:
            storage: 1Gi
