.k8s/db-mysql.yml
# This file holds the K8s objects for the MySQL instance
---
# Headless Service
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  labels:
    role: mysql

spec:
  type: ClusterIP
  clusterIP: None
  selector:
    role: mysql
  
  ports:
    - port: 3306
      targetPort: 3306

---
# StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-set
  labels:
    role: mysql

spec:
  serviceName: "mysql-service"
  replicas: 1
  selector:
    matchLabels:
      role: mysql

  # Pod Template
  template:
    metadata:
      labels:
        role: mysql

    spec:
      containers:
        - name: mysql-db
          image: mysql:8.4
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
            - name: mysql-init
              mountPath: /docker-entrypoint-initdb.d/
      volumes:
        - name: mysql-init
          configMap:
            name: mysql-init-configmap
  
  # Volume Claim Templates
  volumeClaimTemplates:
    - metadata:
        name: mysql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "ebs-storageclass"
        resources:
          requests:
            storage: 1Gi
